terms and conditions alignment on enquiry form issue fixed

--- a/assets/css/yatra.css
+++ b/assets/css/yatra.css
@@ -2475,7 +2475,7 @@ body.single figure {
 
 .yatra-tour-enquiry-form-wrap label {
   display: block;
-  margin1: 0; }
+  margin: 0; }
 
 .yatra-tour-enquiry-form-wrap p {
   margin: 0;
@@ -2483,7 +2483,8 @@ body.single figure {
 
 .yatra-tour-enquiry-form-wrap .yatra-field-wrap {
   width: 100%;
-  display: inline-block; }
+  display: inline-block;
+  position: relative; }
 
 .yatra-tour-enquiry-form-wrap input[type="text"], .yatra-tour-enquiry-form-wrap input[type="number"], .yatra-tour-enquiry-form-wrap input[type="email"], .yatra-tour-enquiry-form-wrap select {
   width: 100% !important;
@@ -2503,6 +2504,27 @@ body.single figure {
 .yatra-tour-enquiry-form-wrap .select2-container--default .select2-selection--single .select2-selection__arrow {
   height: 40px;
   right: 6px; }
+
+.yatra-tour-enquiry-form-wrap .yatra-privacy-policy-agreement, .yatra-tour-enquiry-form-wrap .yatra-terms-agreement {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+     -moz-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  -webkit-box-align: center;
+     -moz-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 10px;
+  margin-bottom: 15px; }
+  .yatra-tour-enquiry-form-wrap .yatra-privacy-policy-agreement a, .yatra-tour-enquiry-form-wrap .yatra-terms-agreement a {
+    font-size: 13px; }
+  .yatra-tour-enquiry-form-wrap .yatra-privacy-policy-agreement label, .yatra-tour-enquiry-form-wrap .yatra-terms-agreement label {
+    cursor: pointer;
+    font-size: 15px; }
 
 #yatra-tour-enquiry-form-fields fieldset {
   width: 100%;
